--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_charts: ^0.5.1
   pie_chart: ^5.3.2
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
