wip: launch url

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,17 +1,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 <!-- Provide required visibility configuration for API level 30 and above -->
 <queries>
-  <!-- If your app checks for SMS support -->
   <intent>
-    <action android:name="android.intent.action.VIEW" />
-    <data android:scheme="sms" />
-  </intent>
-  <!-- If your app checks for call support -->
-  <intent>
-    <action android:name="android.intent.action.VIEW" />
-    <data android:scheme="tel" />
-  </intent>
+        <action android:name="android.intent.action.VIEW" />
+        <data android:scheme="https" />
+    </intent>
+    <intent>
+        <action android:name="android.intent.action.DIAL" />
+        <data android:scheme="tel" />
+    </intent>
+    <intent>
+        <action android:name="android.intent.action.SEND" />
+        <data android:mimeType="*/*" />
+    </intent>
 </queries>
+<uses-permission android:name="android.permission.INTERNET" />
+<uses-permission android:name="android.permission.VIEW" />
+
+
     <application
         android:label="wbc_counter"
         android:name="${applicationName}"
@@ -35,6 +41,9 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+              
+    <action android:name="android.intent.action.VIEW" />
+
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
