--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,9 +5,11 @@
 <!-- CAN LAUNCH -->
 <key>LSApplicationQueriesSchemes</key>
 <array>
-  <string>sms</string>
-  <string>tel</string>
-</array>
+    <string>https</string>
+    <string>http</string>
+    <string>tel</string>
+    <string>mailto</string>
+</array> 
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
