--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,8 +14,9 @@
         <data android:mimeType="*/*" />
     </intent>
 </queries>
-<uses-permission android:name="android.permission.INTERNET" />
-<uses-permission android:name="android.permission.VIEW" />
+<uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
+
+
 
 
     <application
