--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,11 +25,16 @@ dependencies:
   flutter_native_splash: ^2.3.2
   url_launcher: ^6.1.14
   permission_handler: ^11.0.0
+  #DB
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
+  hive_generator: ^2.0.1
 
 
 flutter:
