--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   #DB
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  shared_preferences: ^2.2.1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
