--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   hive_flutter: ^1.1.0
   shared_preferences: ^2.2.1
   provider: ^6.0.5
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+  
 
 dev_dependencies:
   flutter_test:
@@ -37,7 +41,6 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.4.6
   hive_generator: ^2.0.1
-
 
 flutter:
 
