--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,19 @@
+# @format
+
 name: wbc_counter
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: ">=3.2.3 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -35,7 +36,7 @@ dependencies:
   equatable: ^2.0.5
   uuid: ^4.2.2
   pix_flutter: ^2.2.0
-  
+  in_app_review: ^2.0.8
 
 dev_dependencies:
   flutter_test:
@@ -45,7 +46,6 @@ dev_dependencies:
   hive_generator: ^2.0.1
 
 flutter:
-
   uses-material-design: true
 
   assets:
@@ -96,4 +96,3 @@ flutter_native_splash:
   android_12:
     splash_color: "#673AB7"
     splash_color_dark: "#673AB7"
-
