--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   uuid: ^4.2.2
   pix_flutter: ^2.2.0
   in_app_review: ^2.0.8
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
