--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,12 @@ dependencies:
   uuid: ^4.2.2
   pix_flutter: ^2.2.0
   in_app_review: ^2.0.8
-  intl: ^0.19.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
+    sdk: flutter
+  flutter_localizations:
     sdk: flutter
   flutter_lints: ^3.0.1
   build_runner: ^2.4.6
@@ -97,3 +99,5 @@ flutter_native_splash:
   android_12:
     splash_color: "#673AB7"
     splash_color_dark: "#673AB7"
+flutter_intl:
+  enabled: true
