add package flutter locations

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   in_app_review: ^2.0.8
   intl: ^0.18.1
   country_code_picker: ^3.0.0
+  flutter_localization: ^0.2.0
 
 dev_dependencies:
   flutter_test:
