--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,19 +1,19 @@
-buildscript {
-    ext.kotlin_version = '1.7.10'
-    repositories {
-        google()
-        mavenCentral()
-    }
+// buildscript {
+//     ext.kotlin_version = '1.7.10'
+//     repositories {
+//         google()
+//         mavenCentral()
+//     }
 
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.0'
-        // START: FlutterFire Configuration
-        classpath 'com.google.gms:google-services:4.3.5'
-        // END: FlutterFire Configuration
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
-    }
-}
+//     dependencies {
+//         classpath 'com.android.tools.build:gradle:7.3.0'
+//         // START: FlutterFire Configuration
+//         classpath 'com.google.gms:google-services:4.3.5'
+//         // END: FlutterFire Configuration
+//         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
+//     }
+// }
 
 allprojects {
     repositories {
