--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ description: A new Flutter project.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.1+2
+version: 1.0.1+3
 
 environment:
   sdk: ">=3.2.3 <4.0.0"
@@ -43,6 +43,10 @@ dependencies:
   firebase_analytics: ^10.8.10
   firebase_crashlytics: ^3.4.19
   firebase_performance: ^0.9.3+18
+  image_picker: ^1.1.0
+  http: ^1.2.1
+  tflite_flutter: ^0.10.4
+  image: ^4.1.7
 
 dev_dependencies:
   flutter_test:
