--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   in_app_review: ^2.0.8
   intl: ^0.18.1
   flutter_localization: ^0.2.0
-  firebase_core: ^2.27.1
+  firebase_core: ^2.32.0
   firebase_analytics: ^10.8.10
   firebase_crashlytics: ^3.4.19
   firebase_performance: ^0.9.3+18
@@ -47,6 +47,7 @@ dependencies:
   http: ^1.2.1
 
   image: ^4.1.7
+  firebase_storage: ^11.7.7
 
 dev_dependencies:
   flutter_test:
