--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,37 +1,35 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-<!-- Provide required visibility configuration for API level 30 and above -->
-<queries>
-  <intent>
-        <action android:name="android.intent.action.VIEW"/>
-        <data android:scheme="https"/>
-    </intent>
+    <!-- Provide required visibility configuration for API level 30 and above -->
+    <queries>
     <intent>
-        <action android:name="android.intent.action.DIAL"/>
-        <data android:scheme="tel"/>
-    </intent>
-    <intent>
-        <action android:name="android.intent.action.SEND"/>
-        <data android:mimeType="*/*"/>
-    </intent>
+            <action android:name="android.intent.action.VIEW"/>
+            <data android:scheme="https"/>
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.DIAL"/>
+            <data android:scheme="tel"/>
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.SEND"/>
+            <data android:mimeType="*/*"/>
+        </intent>
 
-    <!-- If your app checks for call support -->
-    <intent>
-        <action android:name="android.intent.action.VIEW"/>
-        <data android:scheme="tel"/>
-    </intent>
-    <!-- If your application checks for inAppBrowserView launch mode support -->
-    <intent>
-        <action android:name="android.support.customtabs.action.CustomTabsService"/>
-    </intent>
-</queries>
+        <!-- If your app checks for call support -->
+        <intent>
+            <action android:name="android.intent.action.VIEW"/>
+            <data android:scheme="tel"/>
+        </intent>
+        <!-- If your application checks for inAppBrowserView launch mode support -->
+        <intent>
+            <action android:name="android.support.customtabs.action.CustomTabsService"/>
+        </intent>
+    </queries>
 
-
-<uses-permission android:name="android.permission.INTERNET"/>
-<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-<uses-permission android:name="android.permission.VIBRATE"/>
-
-
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application android:label="leucogram" android:name="${applicationName}" android:icon="@mipmap/ic_launcher" android:requestLegacyExternalStorage="true">
         <activity android:name=".MainActivity" android:exported="true" android:launchMode="singleTop" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:enableOnBackInvokedCallback="true" android:windowSoftInputMode="adjustResize">
