--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.wbcCounter.RunnerTests</string>
+	<string>com.example.wbcCounter</string>
 	<key>PROJECT_ID</key>
 	<string>leucogram-wbc</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:996164351991:ios:981ea70d10edc1b403e0f2</string>
+	<string>1:996164351991:ios:3a2fb4756cf2adb403e0f2</string>
 </dict>
 </plist>
