--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ description: A new Flutter project.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.1+5
+version: 1.0.2+6
 
 environment:
   sdk: ">=3.2.3 <4.0.0"
@@ -20,7 +20,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_charts: ^0.5.1
   pie_chart: ^5.3.2
-  share: ^2.0.4
+  share_plus: ^10.1.3
   flutter_launcher_icons: ^0.14.2
   flutter_svg: ^2.0.7
   flutter_native_splash: ^2.3.2
@@ -36,7 +36,7 @@ dependencies:
   equatable: ^2.0.5
   uuid: ^4.2.2
   pix_flutter: ^2.2.0
-  in_app_review: ^2.0.8
+  in_app_review: ^2.0.10
   intl: ^0.19.0
   flutter_localization: ^0.3.1
   firebase_core: ^3.10.0
