--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   image: ^4.1.7
   firebase_storage: ^12.4.0
   rename_app: ^1.5.0
+  google_mobile_ads: ^5.2.0
 
 dev_dependencies:
   flutter_test:
