--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ description: A new Flutter project.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.1+4
+version: 1.0.3+8
 
 environment:
   sdk: ">=3.2.3 <4.0.0"
@@ -20,8 +20,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_charts: ^0.5.1
   pie_chart: ^5.3.2
-  share: ^2.0.4
-  flutter_launcher_icons: ^0.13.1
+  share_plus: ^10.1.3
+  flutter_launcher_icons: ^0.14.2
   flutter_svg: ^2.0.7
   flutter_native_splash: ^2.3.2
   url_launcher: ^6.1.14
@@ -36,26 +36,27 @@ dependencies:
   equatable: ^2.0.5
   uuid: ^4.2.2
   pix_flutter: ^2.2.0
-  in_app_review: ^2.0.8
-  intl: ^0.18.1
-  flutter_localization: ^0.2.0
-  firebase_core: ^2.32.0
-  firebase_analytics: ^10.8.10
-  firebase_crashlytics: ^3.4.19
-  firebase_performance: ^0.9.3+18
+  in_app_review: ^2.0.10
+  intl: ^0.19.0
+  flutter_localization: ^0.3.1
+  firebase_core: ^3.10.0
+  firebase_analytics: ^11.4.0
+  firebase_crashlytics: ^4.3.0
+  firebase_performance: ^0.10.1
   image_picker: ^1.1.0
   http: ^1.2.1
 
   image: ^4.1.7
-  firebase_storage: ^11.7.7
+  firebase_storage: ^12.4.0
   rename_app: ^1.5.0
+  google_mobile_ads: ^5.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: ^5.0.0
   build_runner: ^2.4.6
   hive_generator: ^2.0.1
 
