--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ description: A new Flutter project.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.4+9
+version: 1.0.5+10
 
 environment:
   sdk: ">=3.2.3 <4.0.0"
@@ -31,25 +31,25 @@ dependencies:
   hive_flutter: ^1.1.0
   shared_preferences: ^2.2.1
   provider: ^6.0.5
-  bloc: ^8.1.2
-  flutter_bloc: ^8.1.3
+  bloc: ^9.0.0
+  flutter_bloc: ^9.0.0
   equatable: ^2.0.5
   uuid: ^4.2.2
   pix_flutter: ^2.2.0
   in_app_review: ^2.0.10
   intl: ^0.19.0
   flutter_localization: ^0.3.1
-  firebase_core: ^3.10.0
-  firebase_analytics: ^11.4.0
-  firebase_crashlytics: ^4.3.0
-  firebase_performance: ^0.10.1
+  firebase_core: ^3.11.0
+  firebase_analytics: ^11.4.2
+  firebase_crashlytics: ^4.3.2
+  firebase_performance: ^0.10.1+2
   image_picker: ^1.1.0
   http: ^1.2.1
 
   image: ^4.1.7
-  firebase_storage: ^12.4.0
+  firebase_storage: ^12.4.2
   rename_app: ^1.5.0
-  google_mobile_ads: ^5.2.0
+  google_mobile_ads: ^5.3.1
 
 dev_dependencies:
   flutter_test:
