--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,7 +33,7 @@ def keystoreProperties = new Properties()
 
 android {
     namespace "com.example.wbc_counter"
-    compileSdkVersion 35
+    compileSdkVersion 36
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -51,8 +51,8 @@ android {
 
     defaultConfig {
         applicationId "br.com.wbc_counter"
-        targetSdkVersion 35
-        minSdkVersion 23  
+        targetSdkVersion 36
+        minSdkVersion flutter.minSdkVersion  
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
